# CMakeTutorials

./: README.md
#0 你好，CMake/: CMakeLists.txt
#1 切换生成器/: CMakeLists.txt  HelloCMake.h
#2 构建和链接静态库和动态库/: CMakeCache.txt  Makefile  README.MD  cmake_install.cmake  hello-world
#3 用条件句控制编译/: CMakeLists.txt  hello-world.cpp  readme.md
#3 用条件句控制编译/#4 向用户显示选项/: Message.cpp  Message.h
#4 向用户显示选项/: readme.md
#5 指定编译器/: CMakeLists-.txt
#6 切换构建类型/: CMakeLists.txt  readme.md
#7 设置编译器选项/: Printer.cpp  Printer.h  readme.md
#8 为语言设定标准/: readme.md
#9 使用控制流/: CMakeLists.txt  ProgressBar.cpp  download.cpp
1.1 将单个源文件编译为可执行文件/: HelloCMake.cpp  README.MD
1.10 使用控制流/: Sleep.h  readme.md
1.2 切换生成器/: README.MD
1.3 构建和链接静态库和动态库/: CMakeLists.txt
1.5 向用户显示选项/: CMakeLists.txt
1.6 指定编译器/: CMakeLists.txt  readme.md
1.7 切换构建类型/: readme.md
1.8 设置编译器选项/: CMakeLists.txt  ProgressBar.h  Sleep.cpp  download.cpp  readme.md
1.9 为语言设定标准/: CMakeLists.txt  download.cpp  readme.md
2.1 检测操作系统/: CMakeLists.txt  readme.md
2.2 处理与平台相关的源代码/: CMakeLists.txt  ProgressBar.h  download.cpp  readme.md
2.3 处理与编译器相关的源代码/: CMakeLists.txt  hello-world.F90  hello-world.cpp  readme.md
2.4 检测处理器体系结构/: CMakeLists.txt  arch-dependent.cpp  readme.md
2.6 使用 Qt 库/: CMakeLists.txt  qt-example.cpp  readme.md
3.1 检测 Python 解释器/: CMakeLists.txt  readme.md
